# django-easyaudit-utils

./: MANIFEST.in  README.rst  setup.cfg
easyaudit_utils/: apps.py  mixins.py  signals.py  urls.py  views.py
easyaudit_utils/templates/easyaudit/: _filters.html  crudevent_list.html  index.html  loginevent_list.html  requestevent_list.html
easyaudit_utils/templatetags/: easyaudit_utils.py
