[metadata]
name = django-easyaudit-utils
version = 0.0.2
description = A Django app to provide handy tools for django-easy-audit.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/ubuviz/django-easyaudit-utils
author = UbuViz
author_email = info@ubuviz.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2 
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
install_requires = ['django-easy-audit>=1.1.1']

[options]
include_package_data = true
packages = find:

