[metadata]
name = django-easyaudit-utils
version = 0.0.4
description = A Django app to provide handy tools for django-easy-audit.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/ubuviz/django-easyaudit-utils
author = UbuViz
author_email = info@ubuviz.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2 
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
install_requires = ['django-easy-audit>=1.1.1']

[options]
include_package_data = true
packages = find:

[flake8]
exclude = build,.git,.tox,./django/utils/six.py,./django/conf/app_template/*,./tests/.env,node_modules/*,.pre-commit-config.yaml
ignore = E501,F405,T003,E203,W503,W504,W601
max-line-length = 119
filename=*.py,*.py.dev

[pycodestyle]
max_line_length=120
filename=*.py,*.py.dev
exclude=.git/*,node_modules/*,.pre-commit-config.yaml
ignore=E501,F405,T003,E203,W503

[isort]
default_section = THIRDPARTY
known_first_party = vizionwebbank  # change it for the name of your django project
known_django = django
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
forced_separate=django.contrib,django.utils
multi_line_output = 5
not_skip = __init__.py
